--- a/index.html
+++ b/index.html
@@ -32,13 +32,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="resume.html">Resume</a></li>
-							<li><a href="generic.html">Portfolio</a></li>
-							<li><a href="elements.html">Contact</a></li>
-						</ul>
-
-						<ul class="actions vertical">
-							<li><a href="#" class="button special fit">Get Started</a></li>
-					
+							<li><a href="#portfolio" >Portfolio</a></li>
 						</ul>
 					</nav>
 
@@ -80,7 +74,7 @@
 							<section id="about" class="spotlights">
 								<section>
 									<a href="resume.html" class="image">
-										<img src="images/starParty_Facebook.png" alt="" data-position="center center" />
+										<img src="portfolio_paintings/painting_stillLife2.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -125,7 +119,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="drawing.html" class="link">Drawings</a></h3>
-										<p>graphite, charcoal & pastel</p>
+										<p>graphite, charcoal, & pastel</p>
 									</header>
 								</article>
 								<article>
@@ -147,17 +141,17 @@
 										<p>paper mache, clay & wire</p>
 									</header>
 								</article>
-								-->
+							-->
 								<article>
 									<span class="image">
 										<img src="images/starParty_summer2018_digital_full.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="digitalArts.html" class="link">DigitalArts</a></h3>
-										<p>InDesign, Illustrator & Photoshop</p>
+										<h3><a href="digitalArts.html" class="link">Digital Arts</a></h3>
+										<p>Illustrator, Houdini, & Maya</p>
 									</header>
 								</article>
-								<article>
+								<!--<article>
 									<span class="image">
 										<img src="images/IMG_2836.jpg" alt="" />
 									</span>
@@ -166,6 +160,7 @@
 										<p>Maya & Houdini</p>
 									</header>
 								</article>
+							-->
 
 								<!--
 								<article>
