--- a/painting.html
+++ b/painting.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
-					<header id="header" class="alt style2">
+					<header id="header" class="alt style3">
 						<a href="index.html" class="logo"><strong>DK</strong> <span>Doyeon Kim</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
@@ -33,18 +33,14 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="resume.html">Resume</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-						<ul class="actions vertical">
-							<li><a href="#" class="button special fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="index.html#portfolio" >Portfolio</a></li>
 						</ul>
 					</nav>
 
+
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
-					<section id="banner" class="style2">
+					<section id="banner" class="style3">
 						<div class="inner">
 							<span class="image">
 								<img src="images/pic07.jpg" alt="" />
