--- a/digitalArts.html
+++ b/digitalArts.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Doyeon - Drawing</title>
+		<title>Doyeon - Digital Arts</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
-					<header id="header" class="alt style4">
+					<header id="header" class="alt style1">
 						<a href="index.html" class="logo"><strong>DK</strong> <span>Doyeon Kim</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
@@ -33,18 +33,13 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="resume.html">Resume</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-						<ul class="actions vertical">
-							<li><a href="#" class="button special fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="index.html#portfolio" >Portfolio</a></li>
 						</ul>
 					</nav>
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
-					<section id="banner" class="style4">
+					<section id="banner" class="style1">
 						<div class="inner">
 							<span class="image">
 								<img src="images/pic07.jpg" alt="" />
@@ -53,7 +48,7 @@
 								<h1>Digital Arts</h1>
 							</header>
 							<div class="content">
-								<p>InDesign, Illustrator & Photoshop</p>
+								<p>Illustrator, Houdini, & Maya</p>
 							</div>
 						</div>
 					</section>
@@ -82,36 +77,43 @@
 							<div class="row">
 								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="portfolio_digitalArts/starParty_summer2018.png" class="image fit" target="_blank"><img src="portfolio_digitalArts/starParty_summer2018.png" alt="starParty_summer2018" /></a>
-										<header>
-											<h3>Summer 2018 TAMU Mitchell Institute Star Parties</h3>
-										</header>
-									</article>
-
-								</div>
-								<div class="4u 12u$(mobile)">
-									<article class="item">
 										<a href="portfolio_digitalArts/starParty_fall2018.png" class="image fit" target="_blank"><img src="portfolio_digitalArts/starParty_fall2018.png" alt="starParty_fall2018" /></a>
 										<header>
 											<h3>Fall 2018 TAMU Mitchell Institute Star Parties</h3>
 										</header>
 									</article>
 								</div>
-
-								<div class="4u$ 12u$(mobile)">
+								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="portfolio_digitalArts/shelves_demo04.mov" class="image fit" target="_blank"><img src="portfolio_digitalArts/shelves_demo04.mov" alt="shelves" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-										<header>
-											<h3>Orci Convallis</h3>
+											<h3>Houdini shelves</h3>
 										</header>
 									</article>
 								</div>
+								<div class="4u 12u$(mobile)">
+									<article class="item">
+										<a href="portfolio_digitalArts/doyeonKim_monsterModel_front.png" class="image fit" target="_blank"><img src="portfolio_digitalArts/doyeonKim_monsterModel_front.png" alt="shelves" /></a>
+										<header>
+											<h3>Maya monster design front</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="portfolio_digitalArts/doyeonKim_monsterModel_side.png" class="image fit" target="_blank"><img src="portfolio_digitalArts/doyeonKim_monsterModel_side.png" alt="shelves" /></a>
+										<header>
+											<h3>Maya monster design side</h3>
+										</header>
+									</article>
+									<!--
+									<article class="item">
+										<a href="portfolio_digitalArts/doyeonKim_monsterTexture.obj" class="image fit" target="_blank"><img src="portfolio_digitalArts/doyeonKim_monsterTexture.obj" alt="shelves" /></a>
+										<header>
+											<h3>Maya monster design</h3>
+										</header>
+									</article>
+								-->
+								</div>
+								
 							</div>
 
 
@@ -188,7 +190,9 @@
 						</div>
 					</section>
 
+				
 				<!-- Footer -->
+				<!--
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
@@ -203,6 +207,9 @@
 							</ul>
 						</div>
 					</footer>
+				-->
+
+
 
 			</div>
 
