--- a/painting.html
+++ b/painting.html
@@ -78,13 +78,13 @@
 							<div class="row">
 								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="portfolio_paintings/painting_stillLife2.jpg" class="image fit" target="_blank"><img src="portfolio_paintings/painting_stillLife2.jpg" alt="stillLife2" /></a>
+										<a href="portfolio_paintings/painting_stillLife2.JPG" class="image fit" target="_blank"><img src="portfolio_paintings/painting_stillLife2.jpg" alt="stillLife2" /></a>
 										<header>
 											<h3>Still Life 1</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="portfolio_painting/paintings_stillLife.jpg" class="image fit" target="_blank"><img src="portfolio_paintings/painting_stillLife.jpg" alt="stillLife1" /></a>
+										<a href="portfolio_painting/paintings_stillLife.JPG" class="image fit" target="_blank"><img src="portfolio_paintings/painting_stillLife.jpg" alt="stillLife1" /></a>
 										<header>
 											<h3>Still Life 2</h3>
 										</header>
@@ -93,7 +93,7 @@
 
 								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="portfolio_paintings/painting_portrait.jpg" class="image fit" target="_blank"><img src="portfolio_paintings/painting_portrait.jpg" alt="portrait" /></a>
+										<a href="portfolio_paintings/painting_portrait.JPG" class="image fit" target="_blank"><img src="portfolio_paintings/painting_portrait.jpg" alt="portrait" /></a>
 										<header>
 											<h3>Portrait</h3>
 										</header>
@@ -102,7 +102,7 @@
 
 								<div class="4u$ 12u$(mobile)">
 									<article class="item">
-										<a href="portfolio_paintings/painting_abstract.jpg" class="image fit" target="_blank"><img src="portfolio_paintings/painting_abstract.jpg" alt="abstract" /></a>
+										<a href="portfolio_paintings/painting_abstract.JPG" class="image fit" target="_blank"><img src="portfolio_paintings/painting_abstract.jpg" alt="abstract" /></a>
 										<header>
 											<h3>Abstract</h3>
 										</header>
