--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 							<section id="about" class="spotlights">
 								<section>
 									<a href="resume.html" class="image">
-										<img src="portfolio_paintings/painting_stillLife2.jpg" alt="" data-position="center center" />
+										<img src="portfolio_paintings/painting_stillLife2.JPG" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
