--- a/digitalArts.html
+++ b/digitalArts.html
@@ -85,7 +85,9 @@
 								</div>
 								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="portfolio_digitalArts/shelves_demo04.mov" class="image fit" target="_blank"><img src="portfolio_digitalArts/shelves_demo04.mov" alt="shelves" /></a>
+										<!--<a href="portfolio_digitalArts/shelves_demo04.mov" class="image fit" target="_blank"><img src="portfolio_digitalArts/shelves_demo04.mov" alt="shelves" /></a>-->
+										<video controls="controls" width="800" height="600" href="portfolio_digitalArts/shelves_demo04.mov">
+										</video>
 										<header>
 											<h3>Houdini shelves</h3>
 										</header>
@@ -94,6 +96,7 @@
 								<div class="4u 12u$(mobile)">
 									<article class="item">
 										<a href="portfolio_digitalArts/doyeonKim_monsterModel_front.png" class="image fit" target="_blank"><img src="portfolio_digitalArts/doyeonKim_monsterModel_front.png" alt="shelves" /></a>
+										
 										<header>
 											<h3>Maya monster design front</h3>
 										</header>
