--- a/digitalArts.html
+++ b/digitalArts.html
@@ -86,10 +86,10 @@
 								<div class="4u 12u$(mobile)">
 									<article class="item">
 										<!--<a href="portfolio_digitalArts/shelves_demo04.mov" class="image fit" target="_blank"><img src="portfolio_digitalArts/shelves_demo04.mov" alt="shelves" /></a>-->
-										<video controls="controls" width="800" height="600" href="portfolio_digitalArts/shelves_demo04.mov">
+										<video controls="controls" class="image fit" href="portfolio_digitalArts/shelves_demo04.mov">
 										</video>
 										<header>
-											<h3>Houdini shelves</h3>
+											<a href="portfolio_digitalArts/shelves_demo04.mov" class="image fit" target="_blank"><h3>Houdini shelves</h3></a>
 										</header>
 									</article>
 								</div>
