--- a/painting.html
+++ b/painting.html
@@ -102,9 +102,9 @@
 
 								<div class="4u$ 12u$(mobile)">
 									<article class="item">
-										<a href="portfolio_paintings/painting_abstract.JPG" class="image fit" target="_blank"><img src="portfolio_paintings/painting_abstract.JPG" alt="abstract" /></a>
+										<a href="portfolio_paintings/painting_abstract.JPG" class="image fit" target="_blank"><img src="portfolio_paintings/painting_abstract.JPG" alt="Silent Revolution" /></a>
 										<header>
-											<h3>Abstract</h3>
+											<h3>Silent Revolution</h3>
 										</header>
 									</article>
 								</div>
