--- a/drawing.html
+++ b/drawing.html
@@ -148,7 +148,7 @@
 									<article class="item">
 										<a href="portfolio_drawings/VanGoghMasterCopy.jpg" class="image fit" target="_blank"><img src="portfolio_drawings/VanGoghMasterCopy.jpg" alt="Van Gogh Master Copy" /></a>
 										<header>
-											<h3>Pastel StillLife 1</h3>
+											<h3>Van Gogh Master Copy</h3>
 										</header>
 									</article>
 								</div>
