--- a/digitalArts.html
+++ b/digitalArts.html
@@ -89,7 +89,7 @@
 										<a href="portfolio_digitalArts/shelves_demo04.mov" class="image fit" target="_blank"><video controls="controls" class="image fit" href="portfolio_digitalArts/shelves_demo04.mov">
 										</video></a>
 										<header>
-											<a href="portfolio_digitalArts/shelves_demo04.mov" class="image fit" target="_blank"><h3>Houdini shelves Deomo</h3></a>
+											<a href="portfolio_digitalArts/shelves_demo04.mov" class="image fit" target="_blank"><h3>Houdini shelves Demo</h3></a>
 										</header>
 									</article>
 								</div>
