--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="https://formspree.io/dkim7991@gmail.com" method="POST"">
+								<form method="post" action="https://formspree.io/dkim7991@gmail.com" method="POST">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
