--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="portfolio_paintings/painting_abstract.jpg" alt="" />
+										<img src="portfolio_paintings/painting_abstract.JPG" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="painting.html" class="link">Paintings</a></h3>
