--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Resume</h1>
+										<h1>Hi-Resume</h1>
 									</header>
 										<h2>EDUCATION</h2>
 										<dt><b>Texas A&M University,</b> College Station, TX</dt>
