--- a/digitalArts.html
+++ b/digitalArts.html
@@ -95,19 +95,13 @@
 								</div>
 								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="portfolio_digitalArts/doyeonKim_monsterModel_front.png" class="image fit" target="_blank"><img src="portfolio_digitalArts/doyeonKim_monsterModel_front.png" alt="shelves" /></a>
+										<a href="https://vimeo.com/390392745" class="image fit" target="_blank"><img src="https://vimeo.com/390392745" alt="Animation" /></a>
 										
 										<header>
-											<h3>Maya monster design front</h3>
+											<h3>Animation</h3>
 										</header>
 									</article>
-									<article class="item">
-										<a href="portfolio_digitalArts/doyeonKim_monsterModel_side.png" class="image fit" target="_blank"><img src="portfolio_digitalArts/doyeonKim_monsterModel_side.png" alt="shelves" /></a>
-										<header>
-											<h3>Maya monster design side</h3>
-										</header>
-									</article>
-									<!--
+																	<!--
 									<article class="item">
 										<a href="portfolio_digitalArts/doyeonKim_monsterTexture.obj" class="image fit" target="_blank"><img src="portfolio_digitalArts/doyeonKim_monsterTexture.obj" alt="shelves" /></a>
 										<header>
