--- a/resume.html
+++ b/resume.html
@@ -70,7 +70,7 @@
 										</dd>
 											
 										<dt><b>Texas A&M Astronomical Instrumentation Lab, </b> College Station, TX: <i>Student Technician, Webmaster, Graphic Designer</i></dt>
-										<dt><i>December 2016&ndash;Present</i></dt>
+										<dt><i>December 2016&ndash;June 2019</i></dt>
 										<dd>
 											<ul>
 												<li>Record and analyze data for total reflectance measurements on various black and white materials</li>
@@ -79,6 +79,7 @@
 												<li>Create the posters and organize the astronomy demos for the Texas A&M Physics & Engineering Festival</li>
 											</ul>
 										</dd>
+										<!--	
 										<dt><b>Chinese and Korean After-School Program,</b> Rock Prairie Elementary School: <i>Korean Language Teacher</i></dt>
 										<dt><i>September 2018&ndash;December 2018</i></dt>
 										<dd>
@@ -90,9 +91,11 @@
 												<li>Built meaningful relationships and networks with students, parents, colleagues, and other school stakeholders</li>
 											</ul>
 										</dd>
+									-->
 									</dl>
 									<hr />
 
+									<!--
 									<h2>ACTIVITIES</h2>
 									<dl>
 										<dt><b>StageCenter Community Theatre,</b> Bryan, TX: <i>Actress</i></dt>
@@ -106,6 +109,7 @@
 										
 									</dl>
 									<hr />
+									-->
 									<h2>PRESENTATIONS</h2>
 
 									<ul>
