--- a/digitalArts.html
+++ b/digitalArts.html
@@ -95,8 +95,10 @@
 								</div>
 								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="https://vimeo.com/390392745" class="image fit" target="_blank"><img src="https://vimeo.com/390392745" alt="Animation" /></a>
-										
+										<iframe src="https://player.vimeo.com/video/390392745" width="640" height="400" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/390392745">The Tipping Point</a> from <a href="https://vimeo.com/user108467942">Doyeon Kim</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+										<!--<a href="https://vimeo.com/390392745" class="image fit" target="_blank"><img src="https://vimeo.com/390392745" alt="Animation" /></a>
+										-->
 										<header>
 											<h3>Animation</h3>
 										</header>
