--- a/digitalArts.html
+++ b/digitalArts.html
@@ -77,9 +77,9 @@
 							<div class="row">
 								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="portfolio_digitalArts/starParty_fall2018.png" class="image fit" target="_blank"><img src="portfolio_digitalArts/starParty_fall2018.png" alt="starParty_fall2018" /></a>
+										<a href="portfolio_digitalArts/starParty_Spring2020.jpg" class="image fit" target="_blank"><img src="portfolio_digitalArts/starParty_fall2018.png" alt="starParty_fall2018" /></a>
 										<header>
-											<h3>Fall 2018 TAMU Mitchell Institute Star Parties</h3>
+											<h3>Spring 2019 TAMU Mitchell Institute Star Parties</h3>
 										</header>
 									</article>
 								</div>
