--- a/digitalArts.html
+++ b/digitalArts.html
@@ -149,7 +149,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="https://formspree.io/dkim7991@gmail.com" method="POST">
+								<form method="post" action="https://formspree.io/kdy7991@aggienetwork.com" method="POST">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
@@ -173,7 +173,7 @@
 									<div class="contact-method">
 										<span class="icon alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">dkim7991@gmail.com</a>
+										<a href="#">kdy7991@aggienetwork.com</a>
 									</div>
 								</section>
 								<section>
@@ -187,7 +187,7 @@
 									<div class="contact-method">
 										<span class="icon alt fa-home"></span>
 										<h3>Address</h3>
-										<span>301 Holleman Dr E APT.#932<br />
+										<span>2314 Cornell Dr<br />
 										College Station, TX 77840<br />
 										United States of America</span>
 									</div>
