--- a/resume.html
+++ b/resume.html
@@ -158,7 +158,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="https://formspree.io/dkim7991@gmail.com" method="POST">
+								<form method="post" action="https://formspree.io/kdy7991@aggienetwork.com" method="POST">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
@@ -182,7 +182,7 @@
 									<div class="contact-method">
 										<span class="icon alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">dkim7991@gmail.com</a>
+										<a href="#">kdy7991@aggienetwork.com</a>
 									</div>
 								</section>
 								<section>
