--- a/digitalArts.html
+++ b/digitalArts.html
@@ -95,11 +95,10 @@
 										</header>
 									</article>
 									<article class="item">
-										<!--<a href="portfolio_digitalArts/shelves_demo04.mov" class="image fit" target="_blank"><img src="portfolio_digitalArts/shelves_demo04.mov" alt="shelves" /></a>-->
-										<a href="portfolio_digitalArts/shelves_demo04.mov" class="image fit" target="_blank"><video controls="controls" class="image fit" href="portfolio_digitalArts/shelves_demo04.mov">
-										</video></a>
+										<iframe src="https://player.vimeo.com/video/390401961" width="640" height="400" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/390401961">Shelves Procedural Modeling</a> from <a href="https://vimeo.com/user108467942">Doyeon Kim</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 										<header>
-											<a href="portfolio_digitalArts/shelves_demo04.mov" class="image fit" target="_blank"><h3>Houdini shelves Demo</h3></a>
+											<h3>Houdini shelves Demo</h3></a>
 										</header>
 									</article>
 							
