--- a/digitalArts.html
+++ b/digitalArts.html
@@ -91,14 +91,14 @@
 										<!--<a href="https://vimeo.com/390392745" class="image fit" target="_blank"><img src="https://vimeo.com/390392745" alt="Animation" /></a>
 										-->
 										<header>
-											<h3>Animation</h3>
+											<h3>Animation from VIZA 613: Introduction to 3D Modeling and Animation</h3>
 										</header>
 									</article>
 									<article class="item">
 										<iframe src="https://player.vimeo.com/video/390401961" width="640" height="400" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 <p><a href="https://vimeo.com/390401961">Shelves Procedural Modeling</a> from <a href="https://vimeo.com/user108467942">Doyeon Kim</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 										<header>
-											<h3>Houdini shelves Demo</h3></a>
+											<h3>Shelves Demo by Houdini</h3></a>
 										</header>
 									</article>
 							
