--- a/digitalArts.html
+++ b/digitalArts.html
@@ -91,7 +91,7 @@
 										<!--<a href="https://vimeo.com/390392745" class="image fit" target="_blank"><img src="https://vimeo.com/390392745" alt="Animation" /></a>
 										-->
 										<header>
-											<h3>Animation from VIZA 613: Introduction to 3D Modeling and Animation</h3>
+											<h3>Animation from VIZA 613: Introduction to 3D Modeling and Animation (Preproduction, Story, Modeling, Texturing, Special Effects)</h3>
 										</header>
 									</article>
 									<article class="item">
