--- a/resume.html
+++ b/resume.html
@@ -70,7 +70,7 @@
 										</dd>
 											
 										<dt><b>Texas A&M Astronomical Instrumentation Lab, </b> College Station, TX: <i>Student Technician, Webmaster, Graphic Designer</i></dt>
-										<dt><i>December 2016&ndash;June 2019</i></dt>
+										<dt><i>December 2016&ndash;May 2019</i></dt>
 										<dd>
 											<ul>
 												<li>Record and analyze data for total reflectance measurements on various black and white materials</li>
@@ -110,8 +110,14 @@
 									</dl>
 									<hr />
 									-->
-									<h2>PRESENTATIONS</h2>
+									<h2>PUBLICATIONS & PRESENTATIONS</h2>
 
+									<ul>
+										<li>"Characterization of the reflectivity of various black materials II", 2018, Proc. The International Society for Optics and Photonics, 10706–195</li>
+									</ul>
+									<ul>
+										<li>"Development of TCal: a mobile spectrophotometric calibration unit for astronomical imaging systems", 2018, Proc. The International Society for Optics and Photonics, 10702–119</li>
+									</ul>
 									<ul>
 										<li>Kim, Doyeon (2017). <a href="Doyeon_presentation.jpg" target="_blank">"Total Reflectance of Black and White Materials."</a> Poster presented at The 2017 Undergraduate Research Summer Poster Session at Texas A&M University</li>
 									</ul>
