--- a/resume.html
+++ b/resume.html
@@ -202,7 +202,7 @@
 									<div class="contact-method">
 										<span class="icon alt fa-home"></span>
 										<h3>Address</h3>
-										<span>301 Holleman Dr E APT.#932<br />
+										<span>2314 Cornell Dr<br />
 										College Station, TX 77840<br />
 										United States of America</span>
 									</div>
