--- a/digitalArts.html
+++ b/digitalArts.html
@@ -95,6 +95,13 @@
 										</header>
 									</article>
 									<article class="item">
+										<iframe src="https://player.vimeo.com/video/394349834" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/394349834">Tiger Gait Transition (Amble and Rotary-Gallop)</a> from <a href="https://vimeo.com/user108467942">Doyeon Kim</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+										<header>
+											<h3>Tiger Gait Transition (Amble and Rotary-Gallop)</h3>
+										</header>
+									</article>
+									<article class="item">
 										<iframe src="https://player.vimeo.com/video/390401961" width="640" height="400" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 <p><a href="https://vimeo.com/390401961">Shelves Procedural Modeling</a> from <a href="https://vimeo.com/user108467942">Doyeon Kim</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 										<header>
